test/good/classes/destructor02.px

class A def
    x: Float
    a1: A?
    a2: A?

    destructor def
        print this.x


A(1, A(2, A(3)), A(1.5))
